Fix: set to push on branch harbour

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - harbour
-    tags:
-      - "0.*"
+        #    tags:
+        #- "0.*"
 
 env:
   OS_VERSION: 4.4.0.68
